2007-02-07  Juanma Barranquero  <lekktu@gmail.com>

	* faces.el (face-valid-attribute-values): Use `defined-colors',
	not its semi-obsolete alias `x-defined-colors'.

2007-02-07  Vinicius Jose Latorre  <viniciusjl@ig.com.br>

	* ps-print.ps: The ps-print commands without face printing should not
	print background color.  Reported by Leo <sdl.web@gmail.com>.
	(ps-print-version): New version 6.7.3.
	(ps-begin-job): New arg.  Fix ps-default-background and
	ps-default-foreground initialization.
	(ps-face-attributes): Fix doc string.
	(ps-face-background, ps-generate-postscript, ps-generate): Fix code.

2007-02-06  Chong Yidong  <cyd@stupidchicken.com>

	* faces.el (face-set-after-frame-default): Compile attributes to
	be set by frame parameters before merging in X resources.

2007-02-06  Juanma Barranquero  <lekktu@gmail.com>

	* simple.el (blink-matching-paren-dont-ignore-comments):
	(blink-matching-paren-on-screen): Doc fixes.

2007-02-06  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/gdb-ui.el (gdb-frames-mode): Truncate lines in stack buffer.

2007-02-05  Juanma Barranquero  <lekktu@gmail.com>

	* loadhist.el (unload-feature): Silently ignore `load-history' entries
	of the form `(defface . SYMBOL)', and treat `(autoload . SYMBOL)'
	entries like `defun'.  Return nil.

2007-02-05  Kim F. Storm  <storm@cua.dk>

	* ido.el: Doc fixes.

2007-02-04  David Kastrup  <dak@gnu.org>

	* play/mpuz.el (mpuz-random-puzzle): Fix potential lockup when
	`mpuz-allow-double-multiplicator' is non-zero, and correct
	calculation of `min'.

2007-02-04  Per Abrahamsen  <abraham@dina.kvl.dk>

	* wid-edit.el (widget-default-create): Insert new text at the
	:from marker _after_ the marker, not before it.

2007-02-04  Alan Mackenzie  <acm@muc.de>

	* progmodes/cc-cmds.el (c-indent-line): Don't erase ^L when a line
	containing it is re-indented.

2007-02-03  Chong Yidong  <cyd@stupidchicken.com>

	* net/newsticker.el (newsticker--insert-image): Update docstring,